--- a/megafon.ipynb
+++ b/megafon.ipynb
@@ -2029,11 +2029,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('IMarchenko_predictions_05.06.csv',index=None)"
+    "result.to_csv('answers_test.csv',index=None)"
    ]
   },
   {
@@ -2045,11 +2045,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'final_model.sav'\n",
+    "filename = 'final_model.pkl'\n",
     "pickle.dump(clf3, open(filename, 'wb'))\n"
    ]
   },
